--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
     font-family: 'Roboto Mono', monospace;
 }
 
-div {
+.clockDiv {
+    margin: 1rem auto 0 auto;
     border: 1px solid black;
     width: 250px;
+    text-align: center;
+    background-color: lightgray;
+    font-size: 1.2rem;
+    width: fit-content;
+    padding: 10px 20px;
+    
 }
