--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 @font-face {
     font-family: 'MyWebFont';
-    src: url('webfont.eot'); /* IE9 Compat Modes */
-    src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('webfont.woff2') format('woff2'), /* Super Modern Browsers */
-         url('webfont.woff') format('woff'), /* Pretty Modern Browsers */
-         url('./digital-7/digital-7\ \(mono\).ttf')  format('truetype'), /* Safari, Android, iOS */
-         url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
-  }
+    src: url('webfont.eot');
+    /* IE9 Compat Modes */
+    src: url('webfont.eot?#iefix') format('embedded-opentype'),
+        /* IE6-IE8 */
+        url('webfont.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('webfont.woff') format('woff'),
+        /* Pretty Modern Browsers */
+        url('./digital-7/digital-7\ \(mono\).ttf') format('truetype'),
+        /* Safari, Android, iOS */
+        url('webfont.svg#svgFontName') format('svg');
+    /* Legacy iOS */
+}
 
 * {
     padding: 0;
@@ -18,17 +24,15 @@
 body {
     background-color: black;
 }
+
 .clockDiv {
-    margin: 1rem auto 0 auto;
-    border: 1px solid black;
-    width: 250px;
+    margin: 5rem auto;
     text-align: center;
     background-color: black;
-    font-size: 1.2rem;
+    font-size: 6rem;
     width: fit-content;
     padding: 10px 20px;
     color: red;
-    font-size: 50px;
     border: 2px solid gray;
     border-radius: 10px;
 }
